--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
-config.py
+.git
+.gitignore
+__pycache__
+*.pyc
+*.pyo
+*.pyd
+*.env
+.env
+venv/
+dist/
+build/
+.idea/
+.vscode/
+raw_freezer_request.txt
+received_freezer_list.txt
+received_meal_plan.txt
+src/config.py
