--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-Flask==2.2.2
-requests==2.28.1
-python-dotenv==0.20.0
+Flask>=2.2,<3
+Werkzeug==2.2.2
+requests>=2.28
+Jinja2>=3.0
+itsdangerous>=2.0
+click>=8.0
